--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 
+body{
+    
+}
 section{
     display: flex;
-    background-color: rgba(70, 68, 68, 0.24);
-    margin: 0%;
+    padding-left: 20px;
 }
 .first{
     width: 50%;
@@ -10,8 +12,8 @@ section{
     font-family: 'Poppins', sans-serif;
 }
 .first img{
-    width: 40%;
-    padding-left: 8%;
+    width: 50%;
+    padding-left: 20%;
     padding-top: 10%;
 }
 span{
@@ -19,8 +21,8 @@ span{
 }
 .button{
     text-decoration: none;
-    background-color: rgb(13, 211, 152);
-    border: 2px solid rgba(80, 190, 157, 0.527) ;
+    background-color: rgb(255, 81, 0);
+    border: 2px solid rgb(255, 81, 0);
     padding: 10px 20px;
     border-radius: 5px;
     color: white;
@@ -33,4 +35,68 @@ span{
 h1{
     padding-left: 5px;
     font-family: 'Teko', sans-serif;
+}
+.center{
+    text-align: center;
+    font-size: 50px;
+}
+.all{
+    display: flex;
+    background-color: rgba(70, 68, 68, 0.24);
+    margin: 0%;
+}
+
+.mission{
+    width: 25%;
+    margin-left: 55px;
+    text-align: justify;
+    font-family: 'Poppins', sans-serif;
+    
+}
+.mission img{
+    width: 30%;
+}
+.color1{
+    background-color: rgba(25, 143, 197, 0.521);
+    border-radius: 10px;
+    padding: 10px 10px;
+}
+.color2{
+    background-color: rgba(0, 109, 172, 0.514);
+    border-radius: 10px;
+    padding: 10px 10px;
+}
+.color3{
+    background-color: rgba(117, 38, 133, 0.521);
+    border-radius: 10px;
+    padding: 10px 10px;
+}
+.coding-pic img{
+width: 300px;
+margin-left: 55px;
+}
+.sec3{
+    padding-right: 155px;
+}
+.coding-pic{
+
+}
+.top{
+    margin-top: 10px;
+}
+.sec3{
+    padding-left: 25px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    text-align: justify;
+}
+.know{
+    text-decoration: none;
+    background-color: rgb(255, 81, 0);
+    border: 2px solid rgb(255, 81, 0);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    
 }
