--- a/style.css
+++ b/style.css
@@ -100,3 +100,19 @@ margin-left: 55px;
     font-family: 'Poppins', sans-serif;
     
 }
+.pro-pic{
+
+}
+.sec4t{
+    padding-right: 25px;
+    font-size: 14px;
+    text-align: justify;
+    padding-left: 50px;
+}
+.sec4t p{
+    font-family:'Poppins', sans-serif;
+}
+.pro-pic img{
+    width: 300px;
+    margin-right: 150px;
+}
